[Misc] Migrate DocumentTitleDisplayerTest to JUnit 5
(cherry picked from commit 28991f7cd8fb1c949277c12dfc405fad13720b0e)